Feat: Transition added

--- a/01-layout/style.css
+++ b/01-layout/style.css
@@ -94,6 +94,7 @@ body {
     line-height: 2.5rem;
     float: left;
     border-right: 0.0625rem solid gray;
+    transition: all 300ms;
  }
 
 
@@ -114,4 +115,5 @@ body {
 
 #nav >ul >li:hover{
     background-color: #70b231;
+    box-shadow: 0rem 0rem 0.23rem green inset;
 }
