--- a/01-layout/style.css
+++ b/01-layout/style.css
@@ -138,13 +138,44 @@ body {
 #nav >ul>li:hover>ul>li{
     background-color: #f2f1f0;
     border-bottom: 1px solid #D6D6;
-    padding: 0.5rem;
+    padding: 1.5rem;
     line-height: 0.5625rem;
     font-size: 0.8125rem;
+    transition: all 300ms;
 
 }
 
 
 #nav >ul>li:hover>ul>li a{
   color: #666666;
+}
+
+#nav >ul>li:hover>ul>li:hover{
+   box-shadow: 0rem 0rem 0.375rem #ccc inset;
+   background-color: beige;
+}
+
+/*content*/
+#content{
+    width: 78.125rem;
+    min-height: 68.75rem;
+    margin: 0rem auto;
+}
+
+
+/* Sidebar */
+
+.aside{
+    width: 12.5rem;
+    float: left;
+    margin: 1.875rem;
+    background-color: white;
+    border: 0.0625rem solid  #ccc;
+    box-shadow: 0rem 0.125rem 1.125rem gray;
+    font-family: sans-serif, Arial, Helvetica, sans-serif;
+}
+
+.aside .widget{
+    display: block;
+    
 }
