--- a/01-layout/style.css
+++ b/01-layout/style.css
@@ -17,6 +17,66 @@
     padding: 0px;
 
 }
+/* forms */
+
+input[type= "text"] ,
+input[type= "email"] ,
+input[type= "password"] ,
+select{
+    border: 0.0625rem solid  #c9c9c9;
+    box-shadow: 0rem 0rem 0.125rem #ccc inset;
+    padding: 0.0625rem;
+    padding-top: 0.125rem;
+    padding-bottom: 0.125rem;
+    color: gray;
+    transition: all 300ms;
+}
+
+
+input[type= "text"] :focus,
+input[type= "email"] :focus,
+input[type= "password"] :focus,
+select:focus{
+
+    border: 0.0625rem solid #70b231;
+    color: black;
+
+}
+
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+button{
+    display: block;
+    border-radius: 0.125rem;
+    border: 0.0625rem solid green;
+    width: 3.75rem;
+    padding: 0.1875rem;
+    background-color: #70b231;
+    cursor: pointer;
+    color: white;
+}
+
+
+input[type="button"]:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+button:hover{
+   box-shadow: 0rem 0rem 0.125rem gray;
+}
+
+
+input[type="button"]:active,
+input[type="submit"]:active,
+input[type="reset"]:active,
+button:active{
+   box-shadow: 0rem 0rem 0.1875rem gray inset;
+   text-shadow: 0rem 0rem 0.0625rem #ccc;
+}
+
+
+
+
 
 body {
     background-image: url("../img/paven.png");
@@ -165,7 +225,7 @@ body {
 
 /* Sidebar */
 
-.aside{
+#aside{
     width: 12.5rem;
     float: left;
     margin: 1.875rem;
@@ -175,7 +235,33 @@ body {
     font-family: sans-serif, Arial, Helvetica, sans-serif;
 }
 
-.aside .widget{
+#aside .widget{
     display: block;
+    width: 11.25rem;
+    height: 15rem;
+    margin: 0.3125rem auto;
+    padding: 0.5rem;
+    padding-left: 0.625rem;
+    padding-right: 0.625rem;
+    font-size: 0.875rem;
+    border-bottom: 0.0635rem dashed  #333333;
+}
+
+#aside .widget:last-child{
+
+    margin-bottom: 1.25rem;
     
+}
+
+#aside h3{
+    display: block;
+    color: black;
+    width: 100%;
+    text-align: center;
+    padding-top: 0.125rem;
+    padding-bottom: 1.225rem;
+    background: #f2f3f2;
+    border-bottom: 0.0625rem solid #ccc;
+    border-left: none;
+    border-right: none;
 }
